# savvagent-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRD.md  README.md  SECURITY.md  bacon.toml
.github/workflows/: ci.yml  wit-portability-guard.yml
crates/provider-anthropic/: Cargo.toml
crates/provider-anthropic/src/: api.rs  lib.rs  main.rs  mcp.rs  stream.rs  translate.rs
crates/provider-anthropic/tests/: integration.rs
crates/provider-gemini/: Cargo.toml
crates/provider-gemini/src/: api.rs  lib.rs  main.rs  mcp.rs  models.rs  schema.rs  stream.rs  translate.rs
crates/provider-gemini/tests/: integration.rs
crates/provider-local/: Cargo.toml
crates/provider-local/src/: api.rs  lib.rs  stream.rs  translate.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: api.rs  lib.rs  mcp.rs  stream.rs  translate.rs
crates/provider-openai/tests/: integration.rs
crates/savvagent/: Cargo.toml
crates/savvagent-host/: Cargo.toml
crates/savvagent-host/examples/: headless.rs
crates/savvagent-host/src/: capabilities.rs  config.rs  default_prompt.rs  lib.rs  logging.rs  permissions.rs  pool.rs  project.rs  provider.rs  sandbox.rs  sensitive_paths.rs  session.rs  tools.rs
crates/savvagent-host/src/router/: legacy_model.rs  mod.rs  namespace.rs  prefix.rs  router.rs
crates/savvagent-host/tests/: cross_provider_history.rs  cross_vendor_history.rs  pool_lifecycle.rs  sandbox_deny_floor.rs  tool_loop.rs
crates/savvagent-host/tests/support/: mod.rs
crates/savvagent-mcp/: Cargo.toml
crates/savvagent-mcp/src/: lib.rs
crates/savvagent-plugin/: Cargo.toml
crates/savvagent-plugin/src/: effect.rs  error.rs  event.rs  lib.rs  manifest.rs  plugin.rs  screen.rs  styled.rs  types.rs
crates/savvagent-protocol/: Cargo.toml  SPEC.md
crates/savvagent-protocol/src/: content.rs  error.rs  lib.rs  models.rs  provider_id.rs  request.rs  response.rs  stream.rs  tool.rs
crates/savvagent-protocol/tests/: round_trip.rs
crates/savvagent/locales/: en.toml  en.yml  es.toml  hi.toml  pt.toml
crates/savvagent/src/: app.rs  config_file.rs  creds.rs  main.rs  migration.rs  models_pref.rs  palette.rs  providers.rs  splash.rs  test_helpers.rs  theme.rs  tui.rs  ui.rs
crates/savvagent/src/llm/: mod.rs
crates/savvagent/src/plugin/: convert.rs  effects.rs  hooks.rs  keybindings.rs  manifests.rs  mod.rs  registry.rs  screen_stack.rs  slash.rs  slots.rs
crates/savvagent/src/plugin/builtin/: keybindings_view.rs  mod.rs  provider_common.rs
crates/savvagent/src/plugin/builtin/changelog/: fetch.rs  mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/clear/: mod.rs
crates/savvagent/src/plugin/builtin/command_palette/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/connect/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/edit_file/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/editor_keybindings/: mod.rs
crates/savvagent/src/plugin/builtin/home_footer/: mod.rs
crates/savvagent/src/plugin/builtin/home_tips/: mod.rs
crates/savvagent/src/plugin/builtin/language/: catalog.rs  mod.rs  picker.rs  screen.rs
crates/savvagent/src/plugin/builtin/migration_picker/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/model/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/plugins_manager/: mod.rs  persistence.rs  screen.rs
crates/savvagent/src/plugin/builtin/prompt_keybindings/: mod.rs
crates/savvagent/src/plugin/builtin/provider_anthropic/: mod.rs
crates/savvagent/src/plugin/builtin/provider_gemini/: mod.rs
crates/savvagent/src/plugin/builtin/provider_local/: mod.rs
crates/savvagent/src/plugin/builtin/provider_openai/: mod.rs
crates/savvagent/src/plugin/builtin/quit/: mod.rs
crates/savvagent/src/plugin/builtin/resume/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/save/: mod.rs
crates/savvagent/src/plugin/builtin/self_update/: apply.rs  cache.rs  check.rs  install_method.rs  mod.rs
crates/savvagent/src/plugin/builtin/splash/: mod.rs  screen.rs
crates/savvagent/src/plugin/builtin/themes/: catalog.rs  editor_theme.rs  mod.rs  picker.rs  screen.rs
crates/savvagent/src/plugin/builtin/view_file/: mod.rs  screen.rs
crates/savvagent/src/theme/: mod.rs  picker.rs
crates/savvagent/tests/: connect_regression.rs  locales.rs  tool_fs_integration.rs  tool_loop.rs
crates/tool-bash/: Cargo.toml
crates/tool-bash/src/: lib.rs
crates/tool-fs/: Cargo.toml
crates/tool-fs/src/: edit.rs  lib.rs  main.rs
crates/tool-grep/: Cargo.toml
crates/tool-grep/src/: lib.rs  search.rs
docs/superpowers/plans/: 2026-05-10-v0.6.0-tooling-parity.md  2026-05-11-v0.7.0-sandbox-hardening.md  2026-05-12-v0.8.0-theme-picker.md  2026-05-12-v0.9.0-plugin-system.md  2026-05-13-v0.10.0-localize-tui.md  2026-05-14-issue-68-changelog-viewer.md  2026-05-14-v0.14.0-default-system-prompt.md  2026-05-15-issue-78-self-update-periodic-recheck.md  2026-05-15-multi-provider-pool-phase-1.md  2026-05-16-multi-provider-pool-phase-2.md  2026-05-16-multi-provider-pool-phase-3.md
docs/superpowers/specs/: 2026-05-10-v0.6.0-tooling-parity-design.md  2026-05-11-v0.7.0-sandbox-hardening-design.md  2026-05-12-v0.8.0-theme-picker-design.md  2026-05-12-v0.9.0-plugin-system-design.md  2026-05-13-v0.10.0-localize-tui-design.md  2026-05-13-v0.11.0-tui-self-update-design.md  2026-05-14-default-system-prompt-design.md  2026-05-14-issue-68-changelog-viewer-design.md  2026-05-15-issue-78-self-update-periodic-recheck-design.md  2026-05-15-multi-provider-pool-and-auto-routing-design.md
locales/: es.yml
src/: agent.rs  app.rs  main.rs
src/llm/: anthropic.rs  gemini.rs  mock.rs  openai.rs
src/tools/: mod.rs  read_file.rs
