[package]
name = "provider-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ollama HTTP API as a Savvagent SPP provider"

# Standalone savvagent-local MCP HTTP shim is deferred — provider runs
# in-process via InProcessProviderClient for v0.5.
[lib]
name = "provider_local"
path = "src/lib.rs"

[dependencies]
savvagent-protocol.workspace = true
savvagent-mcp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true, features = ["json"] }
