[package]
name = "provider-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI Chat Completions API as a Savvagent SPP provider"

# Library only. The `savvagent-openai` binary lives in the `savvagent` crate
# (a thin shim around `provider_openai::run`) so the release archive can ship
# all binaries under a single installer.
[lib]
name = "provider_openai"
path = "src/lib.rs"

[dependencies]
savvagent-protocol.workspace = true
savvagent-mcp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
dotenvy.workspace = true
futures.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true, features = ["json"] }
