[package]
name = "savvagent-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Savvagent agent engine: conversation state, tool-use loop, MCP host"

[dependencies]
savvagent-protocol.workspace = true
savvagent-mcp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

# Cross-vendor compatibility gate (tests/cross_vendor_history.rs).
# Only deps that are NOT already in [dependencies] go here: Cargo makes
# runtime deps available to tests automatically, so re-declaring
# `serde_json` or `futures` (both in the host's [dependencies]) would be
# redundant. `axum` is dev-only and needs the `json` feature for its
# `Json<_>` extractor used by the fake-vendor handlers in Task 2.
provider-anthropic.workspace = true
provider-gemini.workspace = true
provider-openai.workspace = true
axum = { workspace = true, features = ["json"] }

[[example]]
name = "headless"
path = "examples/headless.rs"
