[package]
name = "savvagent-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Plugin trait surface and WIT-portable data types for savvagent"

[dependencies]
async-trait = { workspace = true }
# Intentionally NO ratatui, crossterm, tokio runtime, anyhow.
# See spec section 9 WIT portability rules. CI dep-guard enforces this.
