[package]
name = "savvagent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Savvagent Provider Protocol (SPP) — wire types for MCP-based LLM provider servers"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
