[package]
name = "savvagent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Savvagent — fast, MCP-first coding agent CLI"
default-run = "savvagent"

[[bin]]
name = "savvagent"
path = "src/main.rs"

[dependencies]
savvagent-host = { workspace = true }
savvagent-protocol = { workspace = true }
savvagent-mcp = { workspace = true }
provider-anthropic = { workspace = true }
provider-gemini = { workspace = true }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-textarea.workspace = true
ratatui-explorer.workspace = true
ratatui-code-editor.workspace = true
keyring.workspace = true
