[package]
name = "savvagent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Savvagent — fast, MCP-first coding agent CLI"
default-run = "savvagent"

[[bin]]
name = "savvagent"
path = "src/main.rs"

# Shim binaries that re-export the auxiliary crates' run() entry points so
# `dist` ships one archive per platform with every binary. Each shim is
# ~10 lines and just calls the corresponding crate's `run()`.
[[bin]]
name = "savvagent-tool-fs"
path = "src/bin/savvagent-tool-fs.rs"

[[bin]]
name = "savvagent-tool-bash"
path = "src/bin/savvagent-tool-bash.rs"

[[bin]]
name = "savvagent-tool-grep"
path = "src/bin/savvagent-tool-grep.rs"

[[bin]]
name = "savvagent-anthropic"
path = "src/bin/savvagent-anthropic.rs"

[[bin]]
name = "savvagent-gemini"
path = "src/bin/savvagent-gemini.rs"

[[bin]]
name = "savvagent-openai"
path = "src/bin/savvagent-openai.rs"

[dependencies]
savvagent-host = { workspace = true }
savvagent-protocol = { workspace = true }
savvagent-mcp = { workspace = true }
provider-anthropic = { workspace = true }
provider-gemini = { workspace = true }
provider-local = { workspace = true }
provider-openai = { workspace = true }
tool-fs = { workspace = true }
tool-bash = { workspace = true }
tool-grep = { workspace = true }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-textarea.workspace = true
ratatui-explorer.workspace = true
ratatui-code-editor.workspace = true
keyring.workspace = true

[dev-dependencies]
async-trait.workspace = true
rmcp.workspace = true
tempfile = "3"
