[package]
name = "tool-bash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bash command execution as a stdio MCP server (run)"

# Library only. The `savvagent-tool-bash` binary that hosts spawn lives in the
# `savvagent` crate (a thin shim around `tool_bash::run`) so the release archive
# can ship every binary under a single installer — same pattern as `tool-fs`.
[lib]
name = "tool_bash"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
